--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <body>
     <header class="jumbotron-fluid bg-danger">
-      <h1 class="text-white display-3 text-center p-5">
+      <h1 class="text-white display-3 text-center p-5" id="sspu">
         Česká republika <small>souhrn</small>
       </h1>
       <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
@@ -302,7 +302,7 @@
         <aside class="col-lg-4">
           <section id="zakladni-udaje">
             <h2>Základní údaje</h2>
-            <h3>Geografie</h3>
+            <h3 id="matika">Geografie</h3>
             <div>
               <figure>
                 <img
@@ -322,7 +322,7 @@
             <table class="table table-striped table-responsive">
               <tr>
                 <th>Hlavní město</th>
-                <td>Praha</td>
+                <td id="mesto">Praha</td>
               </tr>
               <tr>
                 <th>Rozloha</th>
@@ -363,7 +363,7 @@
                 <th>Národnostní složení</th>
                 <td>
                   <ul class="list-group">
-                    <li
+                    <li id="cinane"
                       class="list-group-item d-flex justify-content-between align-items-center"
                     >
                       Češi
